--- a/src/sections/project/projects.css
+++ b/src/sections/project/projects.css
@@ -1,30 +1,74 @@
-.description{
-    padding: 0.5rem 2rem;
-    text-align: justify;
-    margin: 2rem 5rem;
-    border-radius: 25px;
-    width: 50rem;
-    border: solid var(--color-primary);
+.project-container {
+  max-width: 1100px;
+  margin: auto;
+  display: flex;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+  padding-bottom: 3rem;
 }
 
-.description:hover{
-    background-color: #DED7EC;
-    
-    margin: 1rem 2.5 rem;
+
+.project-card {
+  background: var(--color-light);
+  padding: 1.2rem 1rem;
 }
 
-.project_container{
-    display: flex;
-    
+h1{
+  margin: 7rem ;
+}
+h2{
+  text-align: center;
+}
+.project-card img{
+  width: 100%;
+  align-items: center;
 }
 
-@media screen and (max-width:1024px){
-    .project_container{
-        display: inline;
-    }
+.project-card video{
+  width: 100%;
+}
 
-    .description{
-        width: auto;
+.project-title{
+  padding: 1rem 0;
+}
 
-    }
+.pro-details p{
+  margin: 2.2rem;
+  padding-bottom: 1rem;
+  font-size:1.1rem;
+  text-align: justify;
+}
+
+.pro-btns{
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0;
+}
+
+a {
+  font-size: 1.5rem;
+}
+
+.pro-btns .btn{
+  background: var(--color-primary);
+  padding: 0.5rem 1rem;
+  color: white;
+}
+
+.pro-btns .btn:hover {
+  background: var(--color-light); /* Change to a different color on hover */
+  border-color: var(--color-primary);
+  color:var(--color-primary);
+}
+
+@media screen and (max-width: 740px){
+  .project-conatiner{
+    max-width: 50px;
+    margin: 2rem;
+    grid-template-columns: 1fr;
+  }
+  .project-card{
+    margin: 2rem;
+  }
+  
 }
